--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
             <li>Досвід створення сайтів на основі WordPress</li>
             <li>Знання SQL на базовому рівні(продовжую навчатись)</li>
         </ul>
+        <li><b>Лабораторні роботи</b> </li>
+        <ul>
+            <li><a href="#">Лабораторна робота №4</a></li>
+            <li><a href="#">Лабораторна робота №</a></li>
+            <li><a href="#">Лабораторна робота №</a></li>
+            <li><a href="#">Лабораторна робота №</a></li>
+        </ul>
+
     </ol>
     </div>
     <img src="images/images.jpg" alt="">
