--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </ul>
         <li><b>Лабораторні роботи</b> </li>
         <ul>
-            <li><a href="#">Лабораторна робота №4</a></li>
+            <li><a href="tasks_Dydyk/Lab4.html">Лабораторна робота №4</a></li>
             <li><a href="#">Лабораторна робота №</a></li>
             <li><a href="#">Лабораторна робота №</a></li>
             <li><a href="#">Лабораторна робота №</a></li>
