--- a/tasks_Dydyk/Lab4.html
+++ b/tasks_Dydyk/Lab4.html
@@ -3,15 +3,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="cssforLR4.css">
     <title>Document</title>
 </head>
 <body>
-    <a href="task 1/index.html">Task1</a>
-    <a href="task 2/cossacs.html">Task2</a>
-    <a href="task 3/cossacs.html">Task3</a>
-    <a href="task 4/css.css">Task4</a>
-    <a href="task 5/index.html">Task5</a>
-    <a href="task 6/index.html">Task6</a>
-    <a href="task 7/index.html">Task7</a>
+    <div>
+        <a href="task 1/index.html">Task1</a>
+        <a href="task 2/cossacs.html">Task2</a>
+        <a href="task 3/cossacs.html">Task3</a>
+        <a href="task 4/css.css">Task4</a>
+        <a href="task 5/index.html">Task5</a>
+        <a href="task 6/index.html">Task6</a>
+        <a href="task 7/index.html">Task7</a>
+    </div>
 </body>
 </html>
