--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="info">
     <div> 
     <ol>
-        <li> <b>Мобільний телефон:</b> <i>+380689164363 </i></li>
-        <li><b>E-mail:</b> <u> romandydyk34@gmail.com </u></li>
+        <li> <b>Мобільний телефон:</b> <a href="tel:+380689164363">+380689164363</a></li>
+        <li><b>E-mail:</b> <a href="mailto:romandydyk34@gmail.com">romandydyk34@gmail.com </a></li>
         <li><b>Вік:</b>  16 років(22.08.2003)</li>
         <li><b>Мови: </b>
         <ul>
