--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li><b>Лабораторні роботи</b> </li>
         <ul>
             <li><a href="tasks_Dydyk/Lab4.html">Лабораторна робота №4</a></li>
-            <li><a href="tasks_Dydyk/Lab5.html">Лабораторна робота №5</a></li>
+            <li><a href="tasks_Dydyk5/Lab5.html">Лабораторна робота №5</a></li>
             <li><a href="#">Лабораторна робота №</a></li>
             <li><a href="#">Лабораторна робота №</a></li>
         </ul>
