--- a/tasks_Dydyk/Lab4.html
+++ b/tasks_Dydyk/Lab4.html
@@ -7,14 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <a href="task 1/index.html">Task1</a>
-        <a href="task 2/cossacs.html">Task2</a>
-        <a href="task 3/cossacs.html">Task3</a>
-        <a href="task 4/css.css">Task4</a>
-        <a href="task 5/index.html">Task5</a>
-        <a href="task 6/index.html">Task6</a>
-        <a href="task 7/index.html">Task7</a>
+    <div class = "main">
+        <a href="task 1/index.html" class="link">Task1</a>
+        <a href="task 2/cossacs.html"class="link">Task2</a>
+        <a href="task 3/cossacs.html"class="link">Task3</a>
+        <a href="task 4/css.css"class="link">Task4</a>
+        <a href="task 5/index.html"class="link">Task5</a>
+        <a href="task 6/index.html"class="link">Task6</a>
+        <a href="task 7/index.html"class="link">Task7</a>
     </div>
 </body>
 </html>
