--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body background="images/images1.jpg">
-    <h1> Резюме </h1>
+    
+    <div class = "header">
+        <div class = "navigation" >
+            <a href="https://romadydyk.github.io/">Головна</a>
+            <a href="#portf">Портфоліо</a>
+            <a href="#lab">Лабораторні роботи</a>
+        </div>
+    </div>
+    <div class = "main">
+    <h1 id = "portf"> Резюме </h1>
     <h2> Дидик Роман Юрійович</h2>
     <div class="info">
     <div> 
@@ -32,7 +41,7 @@
             <li>Досвід створення сайтів на основі WordPress</li>
             <li>Знання SQL на базовому рівні(продовжую навчатись)</li>
         </ul>
-        <li><b>Лабораторні роботи</b> </li>
+        <li id = "lab"><b>Лабораторні роботи</b> </li>
         <ul>
             <li><a href="tasks_Dydyk/Lab4.html">Лабораторна робота №4</a></li>
             <li><a href="tasks_Dydyk5/Lab5.html">Лабораторна робота №5</a></li>
@@ -43,5 +52,6 @@
     </div>
     <img src="images/images.jpg" alt="">
     </div>
+</div>
 </body>
 </html>
