--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </ul>
         <li id = "lab"><b>Лабораторні роботи</b> </li>
         <ul>
+            <li><a href="tasks_Dydyk2/Lab2.html">Лабораторна робота №2</a></li>
             <li><a href="tasks_Dydyk/Lab4.html">Лабораторна робота №4</a></li>
             <li><a href="tasks_Dydyk5/Lab5.html">Лабораторна робота №5</a></li>
             <li><a href="#">Лабораторна робота №</a></li>
