--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
             <li>Знання SQL на базовому рівні(продовжую навчатись)</li>
         </ul>
         <li id = "lab"><b>Лабораторні роботи</b> </li>
-        <ul>
-            <li><a href="tasks_Dydyk2/Lab_2.html">Лабораторна робота №2</a></li>
-            <li><a href="tasks_Dydyk/Lab4.html">Лабораторна робота №4</a></li>
-            <li><a href="tasks_Dydyk5/Lab5.html">Лабораторна робота №5</a></li>
-            <li><a href="#">Лабораторна робота №</a></li>
-            <li><a href="#">Лабораторна робота №</a></li>
-        </ul>
+        
+            <a class="button" href="tasks_Dydyk2/Lab_2.html">Лабораторна робота №2</a>
+            <a class="button" href="tasks_Dydyk/Lab4.html">Лабораторна робота №4</a>
+            <a class="button" href="tasks_Dydyk5/Lab5.html">Лабораторна робота №5</a>
+            <a class="button" href="#">Лабораторна робота №</a>
+            <a class="button" href="#">Лабораторна робота №</a>
+        
+
     </ol>
     </div>
     <img src="images/images.jpg" alt="">
