--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a class="button" href="tasks_Dydyk2/Lab_2.html">Лабораторна робота №2</a>
             <a class="button" href="tasks_Dydyk/Lab4.html">Лабораторна робота №4</a>
             <a class="button" href="tasks_Dydyk5/Lab5.html">Лабораторна робота №5</a>
-            <a class="button" href="#">Лабораторна робота №</a>
+            <a class="button" href="tasks_Dydyk5/Lab6.html">Лабораторна робота №6</a>
             <a class="button" href="#">Лабораторна робота №</a>
         
 
