--- a/tasks_Dydyk7/index.html
+++ b/tasks_Dydyk7/index.html
@@ -10,7 +10,7 @@
 <div class="wrap">
 	<div class="wrap_card">
 		<div class="wrap_sticker sticker_new">НОВИНКА</div>
-		<div class="wrap_category">Для пікніка</div>
+		<div class="wrap_category"> <a href="#">Для пікніка</a></div>
 		<div class="wrap_line"></div>
 		<img src="https://content1.rozetka.com.ua/goods/images/big/173807371.jpg" alt="">
 		<div class="wrap_itname"> <a href="https://rozetka.com.ua/champion_chm00465_g/p293070268/">Коврик туристический 00465-G</a> </div>
@@ -19,30 +19,30 @@
 	</div>
 	<div class="wrap_card">
 		<div class="wrap_sticker sticker_none"></div>
-		<div class="wrap_category">Гаряче смачніше</div>
+		<div class="wrap_category"> <a href="#">Гаряче смачніше</a></div>
 		<div class="wrap_line"></div>
 		<img src="https://content2.rozetka.com.ua/goods/images/big/45830310.jpg" alt="">
 		<div class="wrap_itname"> <a href="https://rozetka.com.ua/pinguin_gas_230g/p457425/">Газовый баллон Pinguin 230</a> </div>
 		<div class="wrap_price"> <div class="wrap_discount">999 грн</div> <div class="wrap_fullprice">137 грн</div> </div>
-		<div class="wrap_botton botton">У КОРЗИНУ</div>
+		<div class="wrap_botton botton"><a href="#">У КОРЗИНУ</a></div>
 	</div>
 	<div class="wrap_card">
 		<div class="wrap_sticker sticker">ХІТ ПРОДАЖІВ</div>
-		<div class="wrap_category">Медицина</div>
+		<div class="wrap_category"><a href="#">Медицина</a></div>
 		<div class="wrap_line"></div>
 		<img src="https://content2.rozetka.com.ua/goods/images/big/121246612.jpg" alt="">
 		<div class="wrap_itname"> <a href="https://rozetka.com.ua/supretto_5670_0001/p196497582/">Дорожная аптечка Supretto</a> </div>
 		<div class="wrap_price"> <div class="wrap_discount"></div> <div class="wrap_fullprice">59 грн</div> </div>
-		<div class="wrap_botton botton">У КОРЗИНУ</div>
+		<div class="wrap_botton botton"><a href="#">У КОРЗИНУ</a></div>
 	</div>
 	<div class="wrap_card">
 		<div class="wrap_sticker sticker">ХІТ ПРОДАЖІВ</div>
-		<div class="wrap_category">Ночівля</div>
+		<div class="wrap_category"><a href="#">Ночівля</a></div>
 		<div class="wrap_line"></div>
 		<img src="https://content2.rozetka.com.ua/goods/images/big/100235260.jpg" alt="">
 		<div class="wrap_itname"> <a href="https://rozetka.com.ua/high_peak_926275/p89745278/">Палатка High Peak Kira 5 Gray</a> </div>
 		<div class="wrap_price"> <div class="wrap_discount"></div> <div class="wrap_fullprice">3999 грн</div> </div>
-		<div class="wrap_botton botton">У КОРЗИНУ</div>
+		<div class="wrap_botton botton"><a href="#">У КОРЗИНУ</a></div>
 	</div>
 </div>
 </body>
