--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <a class="button" href="tasks_Dydyk5/Lab5.html">Лабораторна робота №5</a>
             <a class="button" href="tasks_Dydyk6/Lab6.html">Лабораторна робота №6</a>
             <a class="button" href="tasks_Dydyk7/index.html">Лабораторна робота №7</a>
+            <a class="button" href="kkr/index.html">ККР</a>
         
 
     </ol>
