--- a/kkr/index.html
+++ b/kkr/index.html
@@ -3,13 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="top">
-    <a href="image/logo.jpg" class="logo"></a>
-
+<div class="wrap">
+<div class="header">
+    <a href="info@CreativeStudio.com" class="info">info@CreativeStudio.com</a>
+    <img src="image/logo.jpg" class="logo">
+    <div class="navigation">
+        <a href="#">HOME</a>
+        <a href="#about_us">ABOUT US</a>
+        <a href="#portf">PORTFOLIO</a>
+        <a href="#">SERVICES</a>
+        <a href="#blog">BLOG</a>
+        <a href="#connect">CONTACT US</a>
+    </div>
+    <img src="image/burger.png" alt="" class="burger">
+</div>
+<div class="line"></div>
+<div class="main_image">
+    <a href="#"></a>
+    <img src="image/header_image.png" alt="">
+</div>
+<div class="line"></div>
+<div class="article" id="about_us">
+<div class="content">
+    <span class="arrow">&#8594;</span>
+    <span class="caption">ABOUT US</span>
+    <div class="strong_line"></div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nostrum dolorem sequi voluptatum distinctio sint optio sed cupiditate, ex beatae aut laboriosam vel? Numquam, molestias. Odio optio dignissimos eius fugit.</p>
+    <span class="arrow_small">&#8594;</span>
+    <a href="#">READ</a>
+</div>
+<div class="content">
+    <span class="arrow">&#8594;</span>
+    <span class="caption">OUR BENEFITS</span>
+    <div class="strong_line"></div>
+    <p class="with_tick">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, sint exercitationem.</p>
+    <p class="with_tick">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, sint exercitationem.</p>
+    <p class="with_tick">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, sint exercitationem.</p>
+    
+</div>
+<div class="content">
+    <span class="arrow">&#8594;</span>
+    <span class="caption">TESTIMONIALS</span>
+    <div class="strong_line"></div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nostrum dolorem sequi voluptatum distinctio sint optio sed cupiditate, ex beatae aut laboriosam vel? Numquam, molestias.</p>
+    <span class="signature">Rafi, Graphicsfuel.com</span>
+</div> 
+</div>
+<div class="line"></div>
+<div class="portfolio" id="portf">
+    <span class="arrow">&#8594;</span>
+    <span class="caption_portf">OUR PORTFOLIO</span>
+    <div class="portf_img">
+    <a href="#"><img src="image/img1.png" alt=""></a>
+    <a href="#"><img src="image/img2.png" alt=""></a>
+    <a href="#"><img src="image/img3.png" alt=""></a>
+    <a href="#"><img src="image/img4.png" alt=""></a>
+    </div>
+</div>
+<div class="line"></div>
+<div class="blog_and_connect">
+    <div class="blog" id="blog">
+        <span class="arrow">&#8594;</span>
+        <span class="caption_blog">BLOG UPDATES</span>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex fuga officia voluptatibus architecto possimus nihil numquam iste nisi illum fugit labore soluta eveniet pariatur sapiente, hic praesentium autem consequuntur debitis?</p>
+    </div>
+    <div class="connect" id="connect">
+        <span class="arrow">&#8594;</span>
+        <span class="caption_blog">CONNECT WITH US</span>
+            <div class="icon">
+                <a href="#"><img src="image/img5.png" alt=""></a>
+                <a href="#"><img src="image/img6.png" alt=""></a>
+                <a href="#"><img src="image/img7.png" alt=""></a>
+                <a href="#"><img src="image/img8.png" alt=""></a>
+            </div>
+    </div>
+</div>
+</div>
+<div class="footer">
+    <div class="footer_wrap">
+        <span>Home | About Us | Portfolio | Services | Blog | Contact Us<br>&copy 2010 CreativeStudio. All Rights Reserved</span>
+        <img src="image/footer_logo.png" alt="">
+    </div>
 </div>
 </body>
 </html>
